--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+## [1.1.0] - 2025-01-13
+- wallet created
+- creating user and getting wallet by user made
+
 ## [1.0.0] - 2025-01-11
 - Initial version
 - some testing cases made
