--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+## [1.1.1] - 2024-01-21
+- Renamed `walletsByUser` to `walletsByUserId` in the GraphQL queries
+
 ## [1.1.0] - 2025-01-13
 - wallet created
 - creating user and getting wallet by user made
