--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+## [1.3.0] - 2025-01-22
+- creating transactions and getting them by user made
+
 ## [1.2.0] - 2025-01-21
 - creating categories and getting them by user made
 
