--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+## [1.3.1] - 2025-01-22
+- Added ordering of transactions by date
+
 ## [1.3.0] - 2025-01-22
 - creating transactions and getting them by user made
 
