--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+## [1.4.0] - 2025-01-28
+- Updated wallet balance when creating a transaction
+
 ## [1.3.1] - 2025-01-22
 - Added ordering of transactions by date
 
