--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+## [1.8.0] - 2025-02-21
+- error handling updated
+- authentication made
+
 ## [1.7.0] - 2025-02-18
 - Login and registration made
 
