--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+## [1.9.0] - 2025-02-25
+- ids changed from integers to uuids
+
 ## [1.8.0] - 2025-02-21
 - error handling updated
 - authentication made
