--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+## [1.10.0] - 2025-03-19
+- Removed `any` types and replaced them with proper TypeScript typings
+
 ## [1.9.0] - 2025-02-25
 - ids changed from integers to uuids
 
