--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+## [1.22.0] - 2025-03-27
+- fixed username not being unique
+- logs removed
+
 ## [1.12.0] - 2025-04-02
 - connected to the deployed database
 
