--- a/changelog
+++ b/changelog
@@ -1,5 +1,7 @@
-## [1.22.0] - 2025-03-27
+## [1.23.0] - 2025-04-07
 - fixed username not being unique
+- fixed transaction table name
+- fixed not returning deleted categories
 - logs removed
 
 ## [1.12.0] - 2025-04-02
